--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -84,7 +84,7 @@
 		\midrule
 		\citeauthor{canturk2024} & proceedings & m-sequence & \acrshort{cca} & Language model (ChatGPT) \\
 		\citeauthor{castillos2024dataset} & dataset & burst codes & & Grating stimuli \\
-		\citeauthor{dehais2024} & preprint & burst codes & \acrshort{cnn} & Grating stimuli, dry \acrshort{eeg} \\
+		\citeauthor{dehais2024} & preprint & burst codes & Riemannian, logistic regression & Grating stimuli, dry \acrshort{eeg}, comfort, eyestrain \\
 		\citeauthor{fodor2024} & article & m-sequence & \acrshort{cca} & Classification certainty feedback \\
 		\citeauthor{lai2024} & proceedings & \acrshort{dibs} & \acrfull{fbtrca}, \acrshort{lstm} & Asynchronous \\
 		\citeauthor{martinez2024} & proceedings & non-binary m-sequence & \acrshort{cca} & Learning curve \\
