--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -658,7 +658,7 @@
 
 @article{martinez2021,
 	title={Brain--computer interfaces based on code-modulated visual evoked potentials (c-{VEP}): a literature review},
-	author={Mart{\'\i}nez-Cagigal, V{\'\i}ctor and , Jordy and Santamar{\'\i}a-V{\'a}zquez, Eduardo and P{\'e}rez-Velasco, Sergio and , Peter and Hornero, Roberto},
+	author={Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Thielen, Jordy and Santamar{\'\i}a-V{\'a}zquez, Eduardo and P{\'e}rez-Velasco, Sergio and Desain, Peter and Hornero, Roberto},
 	journal={Journal of Neural Engineering},
 	year={2021},
 	publisher={IOP Publishing},
