add qu et al 2024

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -934,6 +934,16 @@
 	url = {https://doi.org/10.1109/CISP-BMEI48845.2019.8966018}
 }
 
+@article{qu2024,
+	title={Combing Multiple Visual Stimuli to Enhance the Performance of {VEP}-Based Biometrics},
+	author={Qu, Haomin and Zhao, Hongze and Wei, Qingguo and Pei, Weihua and Gao, Xiaorong and Wang, Yijun},
+	journal={IEEE Transactions on Information Forensics and Security},
+	year={2024},
+	publisher={IEEE},
+	doi={10.1109/TIFS.2024.3452628},
+	url={https://doi.org/10.1109/TIFS.2024.3452628}
+}
+
 @inproceedings{riechmann2013,
 	title={Hierarchical codebook visually evoked potentials for fast and flexible {BCIs}},
 	author={Riechmann, Hannes and Finke, Andrea and Ritter, Helge},
