--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -90,6 +90,7 @@
 		\citeauthor{martinez2024} & proceedings & non-binary m-sequence & \acrshort{cca} & Learning curve \\
 		\citeauthor{miao2024} & article & white noise & \acrshort{tdca}, linear modeling, transfer learning & Minimal calibration, subject-to-subject transfer \\
 		\citeauthor{narayanan2024} & proceedings & modulated Gold codes & \acrshort{cca} & Gaze-independent, covert attention \\
+		\citeauthor{qu2024} & article & m-sequence & \acrshort{cca} & Biometrics \\
 		\citeauthor{scheppink2024} & proceedings & modulated Gold codes & \acrshort{cca} & Auditory, \acrshort{caep} \\
 		\citeauthor{shi2024} & article & white-noise & \acrshort{tdca} & Maximum information rate \\
 		\citeauthor{sun2024} & article & m-sequence & \acrshort{tdca} & Small stimuli (0.5, 1, 2, 3 visual degrees) \\
