add hunag et al 2023

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -249,7 +249,7 @@
 	journal={bioRxiv},
 	pages={2024--07},
 	year={2024},
-	publisher={Cold Spring Harbor Laboratory}.
+	publisher={Cold Spring Harbor Laboratory},
 	doi={10.1101/2024.07.17.603960},
 	url={https://doi.org/10.1101/2024.07.17.603960}
 }
@@ -487,13 +487,25 @@
 	url = {https://doi.org/10.1016/j.jneumeth.2020.108855}
 }
 
-@article{huang2023,
+@article{huang2023a,
 	title={Visual tracking brain computer interface},
 	author={Huang, Changxing and Shi, Nanlin and Miao, Yining and Chen, Xiaogang and Wang, Yijun and Gao, Xiaorong},
 	journal={arXiv preprint arXiv:2311.12592},
 	year={2023},
 	doi = {10.48550/arXiv.2311.12592},
 	url = {https://doi.org/10.48550/arXiv.2311.12592}
+}
+
+@article{huang2023b,
+	title={Authentication using c-VEP evoked in a mild-burdened cognitive task},
+	author={Huang, Zhihua and Liao, Zequan and Ou, Guojie and Chen, Lijun and Zhang, Ying},
+	journal={Frontiers in Human Neuroscience},
+	volume={17},
+	pages={1240451},
+	year={2023},
+	publisher={Frontiers Media SA},
+	doi={10.3389/fnhum.2023.1240451},
+	url={https://doi.org/10.3389/fnhum.2023.1240451}
 }
 
 @inproceedings{isaksen2016,
