--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -115,7 +115,8 @@
 		\citeauthor{darmet2023} & proceedings & m-sequence & \acrshort{trca}, EEG2Code, \acrshort{cnn} & \\
 		\citeauthor{fernandez2023} & article & m-sequence & \acrshort{cca} & Eyestrain spatial frequency \\
 		\citeauthor{henke2023} & proceedings & m-sequence & \acrshort{cca} & Background music \\
-		\citeauthor{huang2023} & preprint & white noise & \acrshort{trca} & Visual tracking \\
+		\citeauthor{huang2023a} & preprint & white noise & \acrshort{trca} & Visual tracking \\
+		\citeauthor{huang2023b} & article & m-sequence & Combined EEGNet & Biometrics \\
 		\citeauthor{lai2023} & proceedings & \acrshort{dibs} & \acrshort{fbtrca}, \acrshort{lstm} & fatigue \\
 		\citeauthor{martinez2023a} & article & m-sequence, non-binary m-sequences & \acrshort{cca} & Eyestrain, fatigue \\
 		\citeauthor{martinez2023b} & proceedings & non-binary m-sequence & \acrshort{cca} & Dynamic stopping \\
