fix Cabrera Castillos

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -38,6 +38,15 @@
 	url = {https://doi.org/10.3217/978-3-85125-962-9-168}
 }
 
+@article{ahmadi2024,
+	title={A Bayesian dynamic stopping method for evoked response brain-computer interfacing},
+	author={Ahmadi, Sara and Desain, Peter and Thielen, Jordy},
+	journal={arXiv preprint arXiv:2406.11081},
+	year={2024},
+	doi={10.48550/arXiv.2406.11081},
+	url={https://doi.org/10.48550/arXiv.2406.11081}
+}
+
 @inproceedings{aminaka2015a,
 	title={Chromatic and high-frequency {cVEP}-based {BCI} paradigm},
 	author={Aminaka, Daiki and Makino, Shoji and Rutkowski, Tomasz M},
@@ -194,7 +203,7 @@
 
 @article{castillos2023,
 	title={Burst {c-VEP} Based {BCI}: Optimizing stimulus design for enhanced classification with minimal calibration data and improved user experience},
-	author={Castillos, Kalou Cabrera and Ladouce, Simon and Darmet, Ludovic and Dehais, Fr{\'e}d{\'e}ric},
+	author={{Cabrera Castillos}, Kalou and Ladouce, Simon and Darmet, Ludovic and Dehais, Fr{\'e}d{\'e}ric},
 	journal={NeuroImage},
 	volume={284},
 	pages={120446},
@@ -205,8 +214,8 @@
 }
 
 @dataset{castillos2023dataset,
-	author = {Kalou Cabrera Castillos},
-	title = {{4-class code-VEP EEG data}},
+	author = {{Cabrera Castillos}, Kalou},
+	title = {{4-class code-{VEP} {EEG} data}},
 	year = 2023,
 	publisher = {Zenodo},
 	doi = {10.5281/zenodo.8255618},
@@ -214,9 +223,8 @@
 }
 
 @dataset{castillos2024dataset,
-	author = {Cabrera Castillos, Kalou and
-	Dehais, Frédéric},
-	title = {5-Class Burst C-VEP with Dry EEG},
+	author = {{Cabrera Castillos}, Kalou and Dehais, Frédéric},
+	title = {5-Class Burst c-{VEP} with Dry {EEG}},
 	year = 2024,
 	publisher = {Zenodo},
 	doi  = {10.5281/zenodo.13838406},
@@ -245,7 +253,7 @@
 
 @article{dehais2024,
 	title={Leveraging Grating-Based Flickers: A Leap Toward Practical, Visually Comfortable, and High-Performance Dry {EEG} Code-{VEP} {BCI}},
-	author={Dehais, Frederic and Cabrera Castillos, Kalou and Ladouce, Simon and Clisson, Pierre},
+	author={Dehais, Frederic and {Cabrera Castillos}, Kalou and Ladouce, Simon and Clisson, Pierre},
 	journal={bioRxiv},
 	pages={2024--07},
 	year={2024},
