--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -82,6 +82,7 @@
 		\toprule
 		\textbf{Author(s)} & \textbf{Type} & \textbf{Stimulus} & \textbf{Decoding} & \textbf{Notes} \\ 
 		\midrule
+		\citeauthor{ahmadi2024} & preprint & modulated Gold codes & reconvolution, \acrshort{cca} & Dynamic stopping \\
 		\citeauthor{canturk2024} & proceedings & m-sequence & \acrshort{cca} & Language model (ChatGPT) \\
 		\citeauthor{castillos2024dataset} & dataset & burst codes & & Grating stimuli \\
 		\citeauthor{dehais2024} & preprint & burst codes & Riemannian, logistic regression & Grating stimuli, dry \acrshort{eeg}, comfort, eyestrain \\
