add zhao et al 2019

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1566,6 +1566,19 @@
 	url = {https://doi.org/10.1016/j.compbiomed.2022.105771}
 }
 
+@article{zhao2019,
+	title={Individual identification based on code-modulated visual-evoked potentials},
+	author={Zhao, Hongze and Wang, Yijun and Liu, Zhiduo and Pei, Weihua and Chen, Hongda},
+	journal={IEEE Transactions on Information Forensics and Security},
+	volume={14},
+	number={12},
+	pages={3206--3216},
+	year={2019},
+	publisher={IEEE},
+	doi={10.1109/TIFS.2019.2912272},
+	url={https://doi.org/10.1109/TIFS.2019.2912272}
+}
+
 @inproceedings{zheng2019,
 	title={A Fast Brain Switch Based on Multi-Class Code-Modulated {VEPs}},
 	author={Zheng, Li and Wang, Yijun and Pei, Weihua and Chen, Hongda},
