--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -214,6 +214,7 @@
 		\citeauthor{peng2019} & proceedings & m-sequence & \acrshort{slda} & For psychological experiments (button presses without behavior) \\
 		\citeauthor{shirzhiyan2019} & article & m-sequence, chaotic codes & \acrshort{cca}, spatiotemporal beamforming & Fatigue \\
 		\citeauthor{turi2019} & article & m-sequence & & Static stopping number of cycles \\
+		\citeauthor{zhao2019} & article & m-sequence & \acrshort{fbcca}. \acrshort{fbtrca} & Biometrics \\
 		\citeauthor{zheng2019} & proceedings & Gold codes & \acrshort{trca} & Brain switch \\
 		\bottomrule
 	\end{tabular}
