add miao et al 2024

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -730,7 +730,7 @@
 	url = {https://doi.org/10.1109/SMC.2019.8914445}
 }
 
-@article{miao2024,
+@article{miao2024a,
 	title={High-performance {c-VEP-BCI} under minimal calibration},
 	author={Miao, Yining and Shi, Nanlin and Huang, Changxing and Song, Yonghao and Chen, Xiaogang and Wang, Yijun and Gao, Xiaorong},
 	journal={Expert Systems with Applications},
@@ -740,6 +740,17 @@
 	publisher={Elsevier},
 	doi={10.1016/j.eswa.2024.123679},
 	url={https://doi.org/10.1016/j.eswa.2024.123679}
+}
+
+@inproceedings{miao2024b,
+	title={Exploring Artificial Neural Network Models for {c-VEP} Decoding in a Brain-Artificial Intelligence Interface},
+	author={Miao, Zhengqing and Meunier, Anja and {\v{Z}}{\'a}k, Michal Robert and Grosse-Wentrup, Moritz},
+	booktitle={2024 IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+	pages={4178--4183},
+	year={2024},
+	organization={IEEE},
+	doi={},
+	url={https://eprints.cs.univie.ac.at/8197/}
 }
 
 @inproceedings{mohebbi2015,
