--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -89,7 +89,8 @@
 		\citeauthor{fodor2024} & article & m-sequence & \acrshort{cca} & Classification certainty feedback \\
 		\citeauthor{lai2024} & proceedings & \acrshort{dibs} & \acrfull{fbtrca}, \acrshort{lstm} & Asynchronous \\
 		\citeauthor{martinez2024} & proceedings & non-binary m-sequence & \acrshort{cca} & Learning curve \\
-		\citeauthor{miao2024} & article & white noise & \acrshort{tdca}, linear modeling, transfer learning & Minimal calibration, subject-to-subject transfer \\
+		\citeauthor{miao2024a} & article & white noise & \acrshort{tdca}, linear modeling, transfer learning & Minimal calibration, subject-to-subject transfer \\
+		\citeauthor{miao2024b} & proceedings & m-sequence & EEG2Code, EEGNet, ShallowConvNet, DeepConvNet, ShallowNet & Deep learning, transfer-learning, gine-tuning \\
 		\citeauthor{narayanan2024} & proceedings & modulated Gold codes & \acrshort{cca} & Gaze-independent, covert attention \\
 		\citeauthor{qu2024} & article & m-sequence & \acrshort{cca} & Biometrics \\
 		\citeauthor{scheppink2024} & proceedings & modulated Gold codes & \acrshort{cca} & Auditory, \acrshort{caep} \\
