--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -41,10 +41,11 @@
 @article{ahmadi2024,
 	title={A Bayesian dynamic stopping method for evoked response brain-computer interfacing},
 	author={Ahmadi, Sara and Desain, Peter and Thielen, Jordy},
-	journal={arXiv preprint arXiv:2406.11081},
+	journal={Frontiers in Human Neuroscience},
 	year={2024},
-	doi={10.48550/arXiv.2406.11081},
-	url={https://doi.org/10.48550/arXiv.2406.11081}
+	volume={18},
+	doi={10.3389/fnhum.2024.1437965},
+	url={https://doi.org/10.3389/fnhum.2024.1437965}
 }
 
 @inproceedings{aminaka2015a,
