update dehais et al 2024

--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -85,7 +85,7 @@
 		\citeauthor{ahmadi2024} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Bayesian dynamic stopping \\
 		\citeauthor{canturk2024} & proceedings & m-sequence & \acrshort{cca} & Language model (ChatGPT) \\
 		\citeauthor{castillos2024dataset} & dataset & burst codes & & Grating stimuli \\
-		\citeauthor{dehais2024} & preprint & burst codes & Riemannian, logistic regression & Grating stimuli, dry \acrshort{eeg}, comfort, eyestrain \\
+		\citeauthor{dehais2024} & article & burst codes & Riemannian, logistic regression & Grating stimuli, dry \acrshort{eeg}, comfort, eyestrain \\
 		\citeauthor{fodor2024} & article & m-sequence & \acrshort{cca} & Classification certainty feedback \\
 		\citeauthor{lai2024} & proceedings & \acrshort{dibs} & \acrfull{fbtrca}, \acrshort{lstm} & Asynchronous \\
 		\citeauthor{martinez2024} & proceedings & non-binary m-sequence & \acrshort{cca} & Learning curve \\
