--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -253,14 +253,16 @@
 }
 
 @article{dehais2024,
-	title={Leveraging Grating-Based Flickers: A Leap Toward Practical, Visually Comfortable, and High-Performance Dry {EEG} Code-{VEP} {BCI}},
-	author={Dehais, Frederic and {Cabrera Castillos}, Kalou and Ladouce, Simon and Clisson, Pierre},
-	journal={bioRxiv},
-	pages={2024--07},
+	title={Leveraging textured flickers: a leap toward practical, visually comfortable, and high-performance dry {EEG} code-{VEP} {BCI}},
+	author={Dehais, Fr{\'e}d{\'e}ric and Castillos, Kalou Cabrera and Ladouce, Simon and Clisson, Pierre},
+	journal={Journal of Neural Engineering},
+	volume={21},
+	number={6},
+	pages={066023},
 	year={2024},
-	publisher={Cold Spring Harbor Laboratory},
-	doi={10.1101/2024.07.17.603960},
-	url={https://doi.org/10.1101/2024.07.17.603960}
+	publisher={IOP Publishing},
+	doi={10.1088/1741-2552/ad8ef7},
+	url={https://doi.org/10.1088/1741-2552/ad8ef7}
 }
 
 @inproceedings{desain2008,
