--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -685,6 +685,7 @@
 	journal={Journal of Neural Engineering},
 	year={2021},
 	publisher={IOP Publishing},
+	doi = {10.1088/1741-2552/ac38cf},
 	url = {https://doi.org/10.1088/1741-2552/ac38cf}
 }
 
