PLOS ONE to PLoS ONE

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -383,7 +383,7 @@
 @article{gembler2019c,
 	title={Dynamic time window mechanism for time synchronous {VEP}-based {BCIs}—Performance evaluation with a dictionary-supported {BCI} speller employing {SSVEP} and {c-VEP}},
 	author={Gembler, Felix and Stawicki, Piotr and Saboor, Abdul and Volosyak, Ivan},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={14},
 	number={6},
 	pages={e0218177},
@@ -533,7 +533,7 @@
 @article{isaksen2017,
 	title={Optimal pseudorandom sequence selection for online {c-VEP} based {BCI} control applications},
 	author={Isaksen, Jonas and Mohebbi, Ali and Puthusserypady, Sadasivan},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={12},
 	number={9},
 	pages={e0184785},
@@ -658,7 +658,7 @@
 @article{liu2018,
 	title={A multi-target brain-computer interface based on code modulated visual evoked potentials},
 	author={Liu, Yonghui and Wei, Qingguo and Lu, Zongwu},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={13},
 	number={8},
 	pages={e0202478},
@@ -834,7 +834,7 @@
 @article{nagel2018c,
 	title={Modelling the brain response to arbitrary visual stimulation patterns for a flexible high-speed Brain-Computer Interface},
 	author={Nagel, Sebastian and Sp{\"u}ler, Martin},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={13},
 	number={10},
 	pages={e0206107},
@@ -860,7 +860,7 @@
 @article{nagel2019b,
 	title={World's fastest brain-computer interface: combining {EEG2Code} with deep learning},
 	author={Nagel, Sebastian and Sp{\"u}ler, Martin},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={14},
 	number={9},
 	pages={e0221909},
@@ -1062,7 +1062,7 @@
 @article{shirzhiyan2019,
 	title={Introducing chaotic codes for the modulation of code modulated visual evoked potentials ({c-VEP}) in normal adults for visual fatigue reduction},
 	author={Shirzhiyan, Zahra and Keihani, Ahmadreza and Farahi, Morteza and Shamsi, Elham and GolMohammadi, Mina and Mahnam, Amin and Haidari, Mohsen Reza and Jafari, Amir Homayoun},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={14},
 	number={3},
 	pages={e0213197},
@@ -1094,7 +1094,7 @@
 @article{spuler2012b,
 	title={Online adaptation of a {c-VEP} brain-computer interface ({BCI}) based on error-related potentials and unsupervised learning},
 	author={Sp{\"u}ler, Martin and Rosenstiel, Wolfgang and Bogdan, Martin},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={7},
 	number={12},
 	pages={e51077},
@@ -1152,7 +1152,7 @@
 @article{spuler2017,
 	title={A high-speed brain-computer interface ({BCI}) using dry {EEG} electrodes},
 	author={Sp{\"u}ler, Martin},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={12},
 	number={2},
 	pages={e0172400},
@@ -1234,7 +1234,7 @@
 @article{thielen2015,
 	title={Broad-Band visually evoked potentials: re(con)volution in brain-computer interfacing},
 	author={Thielen, Jordy and van den Broek, Philip and Farquhar, Jason and Desain, Peter},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={10},
 	number={7},
 	pages={e0133797},
@@ -1447,7 +1447,7 @@
 @article{wei2016a,
 	title={Stimulus specificity of brain-computer interfaces based on code modulation visual evoked potentials},
 	author={Wei, Qingguo and Feng, Siwei and Lu, Zongwu},
-	journal={PLOS ONE},
+	journal={PLoS ONE},
 	volume={11},
 	number={5},
 	pages={e0156416},
