add martinez-cagigal et al. 2025

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -723,6 +723,18 @@
 	url={https://doi.org/10.3217/978-3-99161-014-4-041}
 }
 
+@article{martinez2025,
+	title={The role of code-modulated evoked potentials in next-generation brain-computer interfacing},
+	author={Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Thielen, Jordy and Hornero, Roberto and Desain, Peter},
+	journal={Frontiers in Human Neuroscience},
+	volume={19},
+	pages={1548183},
+	publisher={Frontiers},
+	year={2025},
+	doi={10.3389/fnhum.2025.1548183},
+	url={https://doi.org/10.3389/fnhum.2025.1548183}
+}
+
 @inproceedings{matsuno2019,
 	title={Examination of multi-optioning for {cVEP}-based {BCI} by fluctuation of indicator lighting intervals and luminance},
 	author={Matsuno, Shogo and Itakura, Naoaki and Mizuno, Tota and Mito, Kazuyuki},
