--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -74,7 +74,17 @@
 
 
 \begin{document}
-
+	
+\begin{table}[H]
+	\begin{tabular}{p{5cm}p{2cm}p{5cm}p{5cm}p{6.5cm}}
+		\textbf{2025} & & & & \\ 
+		\toprule
+		\textbf{Author(s)} & \textbf{Type} & \textbf{Stimulus} & \textbf{Decoding} & \textbf{Notes} \\ 
+		\midrule
+		\citeauthor{martinez2025} & article &  &  & Editorial \acrshort{cvep} \\
+		\bottomrule
+	\end{tabular}
+\end{table}
 	
 \begin{table}[H]
 	\begin{tabular}{p{5cm}p{2cm}p{5cm}p{5cm}p{6.5cm}}
