add dold, martinez, and santamaria

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -302,6 +302,15 @@
 	url = {https://doi.org/10.3389/fninf.2018.00019}
 }
 
+@article{dold2025,
+	author={Dold, Matthias and Pereira, Joana and Sajonz, Bastian and Coenen, Volker A and Thielen, Jordy and Janssen, Marcus and Tangermann, Michael},
+	title={Dareplane: a modular open-source software platform for {BCI} research with application in closed-loop deep brain stimulation},
+	journal={Journal of Neural Engineering},
+	year={2025},
+	doi={10.1088/1741-2552/adbb20},
+	url={https://doi.org/10.1088/1741-2552/adbb20},
+}
+
 @article{fernandez2023,
 	title={Influence of spatial frequency in visual stimuli for {cVEP}-based {BCIs}: evaluation of performance and user experience},
 	author={Fern{\'a}ndez-Rodr{\'\i}guez, {\'A}lvaro and Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Santamar{\'\i}a-V{\'a}zquez, Eduardo and Ron-Angevin, Ricardo and Hornero, Roberto},
@@ -723,7 +732,7 @@
 	url={https://doi.org/10.3217/978-3-99161-014-4-041}
 }
 
-@article{martinez2025,
+@article{martinez2025a,
 	title={The role of code-modulated evoked potentials in next-generation brain-computer interfacing},
 	author={Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Thielen, Jordy and Hornero, Roberto and Desain, Peter},
 	journal={Frontiers in Human Neuroscience},
@@ -734,6 +743,21 @@
 	doi={10.3389/fnhum.2025.1548183},
 	url={https://doi.org/10.3389/fnhum.2025.1548183}
 }
+
+@InProceedings{martinez2025b,
+	author={Mart{\'i}nez-Cagigal, V{\'i}ctor and Mart{\'i}n-Fern{\'a}ndez, Ana and Santamar{\'i}a-V{\'a}zquez, Eduardo and Pascual-Roa, Beatriz and Ruiz-G{\'a}lvez, Rub{\'e}n and Hornero, Roberto},
+	editor={Pons, Jose L. and Tornero, Jesus and Akay, Metin},
+	title={Advancing Asynchronous C-{VEP}-Based {BCIs}: A Pilot Study},
+	booktitle={Converging Clinical and Engineering Research on Neurorehabilitation V},
+	year={2025},
+	publisher={Springer Nature Switzerland},
+	address={Cham},
+	pages={690--693},
+	doi={10.1007/978-3-031-77588-8_135},
+	url={https://doi.org/10.1007/978-3-031-77588-8_135}
+}
+
+
 
 @inproceedings{matsuno2019,
 	title={Examination of multi-optioning for {cVEP}-based {BCI} by fluctuation of indicator lighting intervals and luminance},
@@ -1027,6 +1051,19 @@
 	isbn={978-3-031-43078-7},
 	doi = {10.1007/978-3-031-43078-7_49},
 	url = {https://doi.org/10.1007/978-3-031-43078-7_49}
+}
+
+@InProceedings{santamaria2025,
+	author={Santamar{\'i}a-V{\'a}zquez, Eduardo and Mart{\'i}nez-Cagigal, V{\'i}ctor and Ruiz-G{\'a}lvez, Rub{\'e}n and Mart{\'i}n-Fern{\'a}ndez, Ana and Pascual-Roa, Beatriz and Hornero, Roberto},
+	editor={Pons, Jose L. and Tornero, Jesus and Akay, Metin},
+	title={Towards Calibration-Free User-Friendly c-{VEP}-Based {BCIs}: An Exploratory Study Using Deep-Learning},
+	booktitle={Converging Clinical and Engineering Research on Neurorehabilitation V},
+	year={2025},
+	publisher={Springer Nature Switzerland},
+	address={Cham},
+	pages={685--689},
+	doi={10.1007/978-3-031-77588-8_134},
+	url={https://doi.org/10.1007/978-3-031-77588-8_134}
 }
 
 @inproceedings{sato2015,
