--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -81,7 +81,10 @@
 		\toprule
 		\textbf{Author(s)} & \textbf{Type} & \textbf{Stimulus} & \textbf{Decoding} & \textbf{Notes} \\ 
 		\midrule
-		\citeauthor{martinez2025} & article &  &  & Editorial \acrshort{cvep} \\
+		\citeauthor{dold2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Dareplane, experiment platform \\
+		\citeauthor{martinez2025a} & article &  &  & Editorial \acrshort{cvep} \\
+		\citeauthor{martinez2025b} & proceedings &  &  & Asynchronous \\
+		\citeauthor{santamaria2025} & proceedings & & & Calibration-free, deep learning \\
 		\bottomrule
 	\end{tabular}
 \end{table}
