--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -306,6 +306,9 @@ url = {https://doi.org/10.3389/fninf.2018.00019}
 title={A 240-target {VEP}-based {BCI} system employing narrow-band random sequences},
 author={Dong, Yida and Zheng, Li and Pei, Weihua and Gao, Xiaorong and Wang, Yijun},
 journal={Journal of Neural Engineering},
+volume={22},
+number={2},
+pages={026024},
 year={2025},
 doi={10.1088/1741-2552/adbfc1},
 url={https://doi.org/10.1088/1741-2552/adbfc1}
