--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -355,6 +355,17 @@ doi={10.3390/brainsci14080846},
 url={https://doi.org/10.3390/brainsci14080846}
 }
 
+@inproceedings{fodor2025,
+title={Evaluation of Efficient and Performance-Retaining {cVEP-BCI} Class Augmentation},
+author={Fodor, Milan Andras and Canturk, Atilla and Heisenberg, Gernot and Volosyak, Ivan and others},
+booktitle={2025 13th International Conference on Brain-Computer Interface (BCI)},
+pages={1--6},
+year={2025},
+organization={IEEE},
+doi={10.1109/BCI65088.2025.10931291},
+url={https://doi.org/10.1109/BCI65088.2025.10931291}
+}
+
 @inproceedings{gembler2018a,
 title={A Dictionary Driven Mental Typewriter Based on Code-Modulated Visual Evoked Potentials ({cVEP})},
 author={Gembler, Felix and Stawicki, Piotr and Saboor, Abdul and Benda, Mihaly and Grichnik, Roland and Rezeika, Aya and Volosyak, Ivan},
