--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -83,6 +83,7 @@
 		\midrule
 		\citeauthor{dold2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Dareplane, experiment platform \\
 		\citeauthor{dong2025} & article & \acrshort{nbrs} & EEG2Code & 240 classes \\
+		\citeauthor{fodor2025} & proceedings & m-sequence & \acrshort{cca} & class augmentation \\
 		\citeauthor{martinez2025a} & article &  &  & Editorial \acrshort{cvep} \\
 		\citeauthor{martinez2025b} & proceedings &  m-sequence & \acrshort{cca} & Asynchronous, early stopping \\
 		\citeauthor{santamaria2025} & proceedings & & & Calibration-free, deep learning \\
