--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1407,6 +1407,17 @@ doi = {10.34973/1ecz-1232},
 url = {https://doi.org/10.34973/1ecz-1232}
 }
 
+@article{thielen2025,
+	title={Towards an {sEEG}-based {BCI} using code-modulated {VEP}: A case study showing the influence of electrode location on decoding efficiency},
+	author={Thielen, Jordy and Tangermann, Michael and Aarnoutse, Erik J and Ramsey, Nick F and Vansteensel, Mariska J},
+	journal={Clinical neurophysiology: official journal of the International Federation of Clinical Neurophysiology},
+	volume={173},
+	pages={213--215},
+	year={2025},
+	doi={10.1016/j.clinph.2025.03.034},
+	url={https://doi.org/10.1016/j.clinph.2025.03.034}
+}
+
 @article{torres2021,
 title={How to build a fast and accurate code-modulated brain-computer interface},
 author={Torres, Juan Antonio Ramirez and Daly, Ian},
