--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -57,6 +57,7 @@
 \newacronym{pca}{PCA}{principal component analysis}
 \newacronym{qssvep}{QSSVEP}{quasi steady-state visual evoked potential}
 \newacronym{rda}{RDA}{regularized discriminant analysis}
+\newacronym{seeg}{sEEG}{stereoelectroencephalography}
 \newacronym{slda}{sLDA}{shrinkage linear discriminant analysis}
 \newacronym{sop}{SOP}{superposition optimized pulse}
 \newacronym{ssmvep}{SSMVEP}{steady state motion visual evoked potential}
@@ -87,6 +88,7 @@
 		\citeauthor{martinez2025a} & article &  &  & Editorial \acrshort{cvep} \\
 		\citeauthor{martinez2025b} & proceedings &  m-sequence & \acrshort{cca} & Asynchronous, early stopping \\
 		\citeauthor{santamaria2025} & proceedings & & & Calibration-free, deep learning \\
+		\cite{thielen2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Implanted, invasive, \acrshort{seeg} \\
 		\bottomrule
 	\end{tabular}
 \end{table}
