--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -690,6 +690,17 @@ doi = {10.1109/BIBM58861.2023.10385977},
 url = {https://doi.org/10.1109/BIBM58861.2023.10385977}
 }
 
+@inproceedings{le2025,
+title={Feasibility of Secure Transaction Authentication Using a {cVEP}-Based {BCI}},
+author={Le, Thi Phuong Ngan and Fodor, Mil{\'a}n Andr{\'a}s and Cant{\"u}rk, Atilla and Volosyak, Ivan},
+booktitle={2025 13th International Conference on Brain-Computer Interface (BCI)},
+pages={1--6},
+year={2025},
+organization={IEEE},
+doi={10.1109/BCI65088.2025.10931547},
+url={https://doi.org/10.1109/BCI65088.2025.10931547}
+}
+
 @article{liu2018,
 title={A multi-target brain-computer interface based on code modulated visual evoked potentials},
 author={Liu, Yonghui and Wei, Qingguo and Lu, Zongwu},
