--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -85,10 +85,11 @@
 		\citeauthor{dold2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Dareplane, experiment platform \\
 		\citeauthor{dong2025} & article & \acrshort{nbrs} & EEG2Code & 240 classes \\
 		\citeauthor{fodor2025} & proceedings & m-sequence & \acrshort{cca} & class augmentation \\
+		\citeauthor{le2025} & proceedings & m-sequence & \acrshort{cca} & authentication \\
 		\citeauthor{martinez2025a} & article &  &  & Editorial \acrshort{cvep} \\
 		\citeauthor{martinez2025b} & proceedings &  m-sequence & \acrshort{cca} & Asynchronous, early stopping \\
 		\citeauthor{santamaria2025} & proceedings & & & Calibration-free, deep learning \\
-		\cite{thielen2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Implanted, invasive, \acrshort{seeg} \\
+		\citeauthor{thielen2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Implanted, invasive, \acrshort{seeg} \\
 		\bottomrule
 	\end{tabular}
 \end{table}
