add Martin-Fernandez 2025

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -725,7 +725,19 @@ doi = {10.1109/CAC48633.2019.8996478},
 url = {https://doi.org/10.1109/CAC48633.2019.8996478}
 }
 
-@article{martinez2021,
+@article{martinfernandez2025,
+title={Enhancing user experience in c-{VEP}-based {BCI}: Effects of visual stimulus opacity on performance and visual fatigue},
+author={Mart{\'\i}n-Fern{\'a}ndez, Ana and Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Moreno-Calder{\'o}n, Selene and Santamar{\'\i}a-V{\'a}zquez, Eduardo and Hornero, Roberto},
+journal={Biomedical Signal Processing and Control},
+volume={108},
+pages={107894},
+year={2025},
+publisher={Elsevier},
+doi={10.1016/j.bspc.2025.107894},
+url={https://doi.org/10.1016/j.bspc.2025.107894},
+}
+
+@article{martinezcagigal2021,
 title={Brain--computer interfaces based on code-modulated visual evoked potentials (c-{VEP}): a literature review},
 author={Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Thielen, Jordy and Santamar{\'\i}a-V{\'a}zquez, Eduardo and P{\'e}rez-Velasco, Sergio and Desain, Peter and Hornero, Roberto},
 journal={Journal of Neural Engineering},
@@ -735,7 +747,7 @@ doi = {10.1088/1741-2552/ac38cf},
 url = {https://doi.org/10.1088/1741-2552/ac38cf}
 }
 
-@article{martinez2023a,
+@article{martinezcagigal2023a,
 title={Non-binary m-sequences for more comfortable brain--computer interfaces based on c-{VEPs}},
 author={Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Santamar{\'\i}a-V{\'a}zquez, Eduardo and P{\'e}rez-Velasco, Sergio and Marcos-Mart{\'\i}nez, Diego and Moreno-Calder{\'o}n, Selene and Hornero, Roberto},
 journal={Expert Systems with Applications},
@@ -746,7 +758,7 @@ doi = {10.1016/j.eswa.2023.120815},
 url = {https://doi.org/10.1016/j.eswa.2023.120815}
 }
 
-@InProceedings{martinez2023b,
+@InProceedings{martinezcagigal2023b,
 author={Mart{\'i}nez-Cagigal, V{\'i}ctor and Santamar{\'i}a-V{\'a}zquez, Eduardo and Hornero, Roberto},
 editor={Rojas, Ignacio and Joya, Gonzalo and Catala, Andreu}, 
 title={Toward Early Stopping Detection for Non-binary c-VEP-Based BCIs: A Pilot Study},
@@ -760,7 +772,7 @@ doi = {10.1007/978-3-031-43078-7_47},
 url = {https://doi.org/10.1007/978-3-031-43078-7_47}
 }
 
-@inproceedings{martinez2024,
+@inproceedings{martinezcagigal2024,
 title={Assessing calibration durations for {c-VEP}-based {BCIs}: Insights from non-binary patterns and spatial frequency variations},
 author={Víctor Martínez-Cagigal and Álvaro Fernández-Rodríguez and Eduardo Santamaría-Vázquez and Ana Martín-Fernández and Roberto Hornero},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
@@ -769,7 +781,7 @@ doi={10.3217/978-3-99161-014-4-041},
 url={https://doi.org/10.3217/978-3-99161-014-4-041}
 }
 
-@article{martinez2025a,
+@article{martinezcagigal2025a,
 title={The role of code-modulated evoked potentials in next-generation brain-computer interfacing},
 author={Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Thielen, Jordy and Hornero, Roberto and Desain, Peter},
 journal={Frontiers in Human Neuroscience},
@@ -781,7 +793,7 @@ doi={10.3389/fnhum.2025.1548183},
 url={https://doi.org/10.3389/fnhum.2025.1548183}
 }
 
-@InProceedings{martinez2025b,
+@InProceedings{martinezcagigal2025b,
 author={Mart{\'i}nez-Cagigal, V{\'i}ctor and Mart{\'i}n-Fern{\'a}ndez, Ana and Santamar{\'i}a-V{\'a}zquez, Eduardo and Pascual-Roa, Beatriz and Ruiz-G{\'a}lvez, Rub{\'e}n and Hornero, Roberto},
 editor={Pons, Jose L. and Tornero, Jesus and Akay, Metin},
 title={Advancing Asynchronous C-{VEP}-Based {BCIs}: A Pilot Study},
