--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -86,8 +86,9 @@
 		\citeauthor{dong2025} & article & \acrshort{nbrs} & EEG2Code & 240 classes \\
 		\citeauthor{fodor2025} & proceedings & m-sequence & \acrshort{cca} & class augmentation \\
 		\citeauthor{le2025} & proceedings & m-sequence & \acrshort{cca} & authentication \\
-		\citeauthor{martinez2025a} & article &  &  & Editorial \acrshort{cvep} \\
-		\citeauthor{martinez2025b} & proceedings &  m-sequence & \acrshort{cca} & Asynchronous, early stopping \\
+		\citeauthor{martinfernandez2025} & article & m-sequence & \acrshort{cca} & stimulus opacity \\
+		\citeauthor{martinezcagigal2025a} & article &  &  & Editorial \acrshort{cvep} \\
+		\citeauthor{martinezcagigal2025b} & proceedings &  m-sequence & \acrshort{cca} & Asynchronous, early stopping \\
 		\citeauthor{santamaria2025} & proceedings & & & Calibration-free, deep learning \\
 		\citeauthor{thielen2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Implanted, invasive, \acrshort{seeg} \\
 		\bottomrule
@@ -107,7 +108,7 @@
 		\citeauthor{fodor2024} & article & m-sequence & \acrshort{cca} & Classification certainty feedback \\
 		\citeauthor{huang2024} & article & white noise & \acrshort{trca} & Visual tracking \\
 		\citeauthor{lai2024} & proceedings & \acrshort{dibs} & \acrfull{fbtrca}, \acrshort{lstm} & Asynchronous \\
-		\citeauthor{martinez2024} & proceedings & non-binary m-sequence & \acrshort{cca} & Learning curve \\
+		\citeauthor{martinezcagigal2024} & proceedings & non-binary m-sequence & \acrshort{cca} & Learning curve \\
 		\citeauthor{miao2024a} & article & white noise & \acrshort{tdca}, linear modeling, transfer learning & Minimal calibration, subject-to-subject transfer \\
 		\citeauthor{miao2024b} & proceedings & m-sequence & EEG2Code, EEGNet, ShallowConvNet, DeepConvNet, ShallowNet & Deep learning, transfer-learning, gine-tuning \\
 		\citeauthor{narayanan2024} & proceedings & modulated Gold codes & \acrshort{cca} & Gaze-independent, covert attention \\
@@ -138,8 +139,8 @@
 		\citeauthor{henke2023} & proceedings & m-sequence & \acrshort{cca} & Background music \\
 		\citeauthor{huang2023} & article & m-sequence & Combined EEGNet & Biometrics \\
 		\citeauthor{lai2023} & proceedings & \acrshort{dibs} & \acrshort{fbtrca}, \acrshort{lstm} & fatigue \\
-		\citeauthor{martinez2023a} & article & m-sequence, non-binary m-sequences & \acrshort{cca} & Eyestrain, fatigue \\
-		\citeauthor{martinez2023b} & proceedings & non-binary m-sequence & \acrshort{cca} & Dynamic stopping \\
+		\citeauthor{martinezcagigal2023a} & article & m-sequence, non-binary m-sequences & \acrshort{cca} & Eyestrain, fatigue \\
+		\citeauthor{martinezcagigal2023b} & proceedings & non-binary m-sequence & \acrshort{cca} & Dynamic stopping \\
 		\citeauthor{moreno2023} & article & m-sequence & \acrshort{cca} & Games \\
 		\citeauthor{santamaria2023} & proceedings & non-binary m-sequence, & EEG-inception & \\
 		\citeauthor{thielen2023a} & proceedings & m-sequence, \acrshort{apa} sequence, Gold codes, Golay sequence, de Bruijn sequence & reconvolution, \acrshort{cca} & Simulated \acrshort{eeg} \\
@@ -176,7 +177,7 @@
 		\textbf{Author(s)} & \textbf{Type} & \textbf{Stimulus} & \textbf{Decoding} & \textbf{Notes} \\
 		\midrule
 		\citeauthor{kaya2021} & article & quasi steady-state & \acrshort{clad} & \\
-		\citeauthor{martinez2021} & article & & & Review \acrshort{cvep} \\
+		\citeauthor{martinezcagigal2021} & article & & & Review \acrshort{cvep} \\
 		\citeauthor{thielen2021} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Zero-training \\
 		\citeauthor{torres2021} & article & \acrshort{apa} sequence, de Bruijn sequence, Golay sequence, m-sequence, Gold code, Kasami sequence & \acrshort{cca}, \acrshort{ica}, \acrshort{pca}, \acrshort{mlp}  & Synthetic \acrshort{eeg} \\
 		\citeauthor{verbaarschot2021} & article & modulated Gold codes & \acrshort{cca} & \acrshort{als} versus healthy participants \\
