--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -355,7 +355,7 @@ doi={10.3390/brainsci14080846},
 url={https://doi.org/10.3390/brainsci14080846}
 }
 
-@inproceedings{fodor2025,
+@inproceedings{fodor2025a,
 title={Evaluation of Efficient and Performance-Retaining {cVEP-BCI} Class Augmentation},
 author={Fodor, Milan Andras and Canturk, Atilla and Heisenberg, Gernot and Volosyak, Ivan and others},
 booktitle={2025 13th International Conference on Brain-Computer Interface (BCI)},
@@ -365,6 +365,20 @@ organization={IEEE},
 doi={10.1109/BCI65088.2025.10931291},
 url={https://doi.org/10.1109/BCI65088.2025.10931291}
 }
+
+@article{fodor2025b,
+	title={Streamlining {cVEP} Paradigms: Effects of a Minimized Electrode Montage on Brain–Computer Interface Performance},
+	author={Fodor, Mil{\'a}n and Cant{\"u}rk, Atilla and Heisenberg, Gernot and Volosyak, Ivan},
+	journal={Brain Sciences},
+	volume={15},
+	number={6},
+	pages={549},
+	year={2025},
+	publisher={MDPI},
+	doi={10.3390/brainsci15060549},
+	url={https://doi.org/10.3390/brainsci15060549}
+}
+
 
 @inproceedings{gembler2018a,
 title={A Dictionary Driven Mental Typewriter Based on Code-Modulated Visual Evoked Potentials ({cVEP})},
