--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -84,7 +84,8 @@
 		\midrule
 		\citeauthor{dold2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Dareplane, experiment platform \\
 		\citeauthor{dong2025} & article & \acrshort{nbrs} & EEG2Code & 240 classes \\
-		\citeauthor{fodor2025} & proceedings & m-sequence & \acrshort{cca} & class augmentation \\
+		\citeauthor{fodor2025a} & proceedings & m-sequence & \acrshort{cca} & class augmentation \\
+		\citeauthor{fodor2025a} & article & m-sequence & \acrshort{cca} & number of electrodes, montage \\
 		\citeauthor{le2025} & proceedings & m-sequence & \acrshort{cca} & authentication \\
 		\citeauthor{martinfernandez2025} & article & m-sequence & \acrshort{cca} & stimulus opacity \\
 		\citeauthor{martinezcagigal2025a} & article &  &  & Editorial \acrshort{cvep} \\
@@ -213,7 +214,7 @@
 		\midrule
 		\citeauthor{ahmadi2019dataset1} & dataset & modulated Gold codes & & \\
 		\citeauthor{ahmadi2019dataset2} & dataset & modulated Gold codes & & \\
-		\citeauthor{ahmadi2019} & article & modulated Gold codes & \acrshort{cca} & Low channel count \\
+		\citeauthor{ahmadi2019} & article & modulated Gold codes & \acrshort{cca} & Number of electrodes, montage \\
 		\citeauthor{basaklar2019} & article & m-sequence & \acrshort{cca} & Presentation rate (60, 120, 240 Hz) \\
 		\citeauthor{borhanazad2019} & proceedings & modulated Gold codes & \acrshort{cca} & Presentation rate (40, 60, 90, 120 Hz) \\
 		\citeauthor{desain2019} & patent & modulated Gold codes & \acrshort{cca} & \\
